DS_visual/DSDSLParser.py
# Generated from DSDSL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DSDSLParser ( Parser ):

    grammarFileName = "DSDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'create'", "';'", "'insert'", "'build_tree'", 
                     "'['", "','", "']'", "'visualize'", "'save'", "'load'", 
                     "'as'", "'step'", "'#'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "NUMBER", "STRING", 
                      "COMMENT", "WS" ]

    RULE_script = 0
    RULE_statement = 1
    RULE_createStmt = 2
    RULE_insertStmt = 3
    RULE_buildTreeStmt = 4
    RULE_visualizeStmt = 5
    RULE_saveStmt = 6
    RULE_loadStmt = 7
    RULE_stepStmt = 8
    RULE_valueList = 9
    RULE_value = 10

    ruleNames =  [ "script", "statement", "createStmt", "insertStmt", "buildTreeStmt", 
                   "visualizeStmt", "saveStmt", "loadStmt", "stepStmt", 
                   "valueList", "value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    ID=14
    NUMBER=15
    STRING=16
    COMMENT=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DSDSLParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSDSLParser.StatementContext)
            else:
                return self.getTypedRuleContext(DSDSLParser.StatementContext,i)


        def getRuleIndex(self):
            return DSDSLParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)




    def script(self):

        localctx = DSDSLParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 136986) != 0):
                self.state = 22
                self.statement()
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 28
            self.match(DSDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def createStmt(self):
            return self.getTypedRuleContext(DSDSLParser.CreateStmtContext,0)


        def insertStmt(self):
            return self.getTypedRuleContext(DSDSLParser.InsertStmtContext,0)


        def buildTreeStmt(self):
            return self.getTypedRuleContext(DSDSLParser.BuildTreeStmtContext,0)


        def visualizeStmt(self):
            return self.getTypedRuleContext(DSDSLParser.VisualizeStmtContext,0)


        def saveStmt(self):
            return self.getTypedRuleContext(DSDSLParser.SaveStmtContext,0)


        def loadStmt(self):
            return self.getTypedRuleContext(DSDSLParser.LoadStmtContext,0)


        def stepStmt(self):
            return self.getTypedRuleContext(DSDSLParser.StepStmtContext,0)


        def COMMENT(self):
            return self.getToken(DSDSLParser.COMMENT, 0)

        def getRuleIndex(self):
            return DSDSLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = DSDSLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 38
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.createStmt()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.insertStmt()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 32
                self.buildTreeStmt()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 33
                self.visualizeStmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 34
                self.saveStmt()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 6)
                self.state = 35
                self.loadStmt()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 7)
                self.state = 36
                self.stepStmt()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 8)
                self.state = 37
                self.match(DSDSLParser.COMMENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DSDSLParser.ID)
            else:
                return self.getToken(DSDSLParser.ID, i)

        def getRuleIndex(self):
            return DSDSLParser.RULE_createStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateStmt" ):
                listener.enterCreateStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateStmt" ):
                listener.exitCreateStmt(self)




    def createStmt(self):

        localctx = DSDSLParser.CreateStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_createStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(DSDSLParser.T__0)
            self.state = 41
            self.match(DSDSLParser.ID)
            self.state = 42
            self.match(DSDSLParser.ID)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 43
                self.match(DSDSLParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DSDSLParser.ID, 0)

        def valueList(self):
            return self.getTypedRuleContext(DSDSLParser.ValueListContext,0)


        def getRuleIndex(self):
            return DSDSLParser.RULE_insertStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsertStmt" ):
                listener.enterInsertStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsertStmt" ):
                listener.exitInsertStmt(self)




    def insertStmt(self):

        localctx = DSDSLParser.InsertStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_insertStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(DSDSLParser.T__2)
            self.state = 47
            self.match(DSDSLParser.ID)
            self.state = 48
            self.valueList()
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 49
                self.match(DSDSLParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BuildTreeStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DSDSLParser.ID, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSDSLParser.ValueContext)
            else:
                return self.getTypedRuleContext(DSDSLParser.ValueContext,i)


        def getRuleIndex(self):
            return DSDSLParser.RULE_buildTreeStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBuildTreeStmt" ):
                listener.enterBuildTreeStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBuildTreeStmt" ):
                listener.exitBuildTreeStmt(self)




    def buildTreeStmt(self):

        localctx = DSDSLParser.BuildTreeStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_buildTreeStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(DSDSLParser.T__3)
            self.state = 53
            self.match(DSDSLParser.ID)
            self.state = 54
            self.match(DSDSLParser.T__4)
            self.state = 55
            self.value()
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 56
                self.match(DSDSLParser.T__5)
                self.state = 57
                self.value()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(DSDSLParser.T__6)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 64
                self.match(DSDSLParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VisualizeStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DSDSLParser.ID)
            else:
                return self.getToken(DSDSLParser.ID, i)

        def getRuleIndex(self):
            return DSDSLParser.RULE_visualizeStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVisualizeStmt" ):
                listener.enterVisualizeStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVisualizeStmt" ):
                listener.exitVisualizeStmt(self)




    def visualizeStmt(self):

        localctx = DSDSLParser.VisualizeStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_visualizeStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(DSDSLParser.T__7)
            self.state = 68
            self.match(DSDSLParser.ID)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 69
                self.match(DSDSLParser.ID)


            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 72
                self.match(DSDSLParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaveStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DSDSLParser.ID, 0)

        def STRING(self):
            return self.getToken(DSDSLParser.STRING, 0)

        def getRuleIndex(self):
            return DSDSLParser.RULE_saveStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSaveStmt" ):
                listener.enterSaveStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSaveStmt" ):
                listener.exitSaveStmt(self)




    def saveStmt(self):

        localctx = DSDSLParser.SaveStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_saveStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(DSDSLParser.T__8)
            self.state = 76
            self.match(DSDSLParser.ID)
            self.state = 77
            self.match(DSDSLParser.STRING)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 78
                self.match(DSDSLParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoadStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(DSDSLParser.STRING, 0)

        def ID(self):
            return self.getToken(DSDSLParser.ID, 0)

        def getRuleIndex(self):
            return DSDSLParser.RULE_loadStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoadStmt" ):
                listener.enterLoadStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoadStmt" ):
                listener.exitLoadStmt(self)




    def loadStmt(self):

        localctx = DSDSLParser.LoadStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_loadStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(DSDSLParser.T__9)
            self.state = 82
            self.match(DSDSLParser.STRING)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 83
                self.match(DSDSLParser.T__10)
                self.state = 84
                self.match(DSDSLParser.ID)


            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 87
                self.match(DSDSLParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StepStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DSDSLParser.ID)
            else:
                return self.getToken(DSDSLParser.ID, i)

        def valueList(self):
            return self.getTypedRuleContext(DSDSLParser.ValueListContext,0)


        def getRuleIndex(self):
            return DSDSLParser.RULE_stepStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStepStmt" ):
                listener.enterStepStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStepStmt" ):
                listener.exitStepStmt(self)




    def stepStmt(self):

        localctx = DSDSLParser.StepStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_stepStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(DSDSLParser.T__11)
            self.state = 91
            self.match(DSDSLParser.ID)
            self.state = 92
            self.match(DSDSLParser.ID)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 57344) != 0):
                self.state = 93
                self.valueList()


            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 96
                self.match(DSDSLParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSDSLParser.ValueContext)
            else:
                return self.getTypedRuleContext(DSDSLParser.ValueContext,i)


        def getRuleIndex(self):
            return DSDSLParser.RULE_valueList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValueList" ):
                listener.enterValueList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValueList" ):
                listener.exitValueList(self)




    def valueList(self):

        localctx = DSDSLParser.ValueListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_valueList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.value()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 100
                self.match(DSDSLParser.T__5)
                self.state = 101
                self.value()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(DSDSLParser.NUMBER, 0)

        def ID(self):
            return self.getToken(DSDSLParser.ID, 0)

        def getRuleIndex(self):
            return DSDSLParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = DSDSLParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 57344) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





